# img2pose

./: .gitignore  CHANGELOG.md  CLAUDE.md  conftest.py  pyproject.toml  test_batch_inference.py
.plans/batch-inference-2025-01/: 00_scope_and_success_criteria.md  01_repo_inventory.md  02_design_spec.md  03_implementation_task_breakdown.md  04_test_strategy.md  05_coverage_and_gates.md  06_traceability_matrix.md  07_docs_update_plan.md  90_gap_report.md  99_plan_digest.md
.plans/pip-library-2025-01/: 00_scope_and_success_criteria.md  01_repo_inventory.md  02_design_spec.md  03_implementation_task_breakdown.md  04_test_strategy.md  05_coverage_and_gates.md  06_traceability_matrix.md  07_docs_update_plan.md  90_gap_report.md  99_plan_digest.md
scripts/: convert_to_lean_model.py  example_alignment.py  example_basic.py  example_batch.py
src/img2pose/: README.md  __init__.py  _alignment.py  _model.py  _models.py  _pose_ops.py  _rcnn.py  _rpn.py  _visualization.py  _weights.py  detector.py
tests/: __init__.py  conftest.py
tests/equivalence/: __init__.py  test_numerical.py
tests/integration/: __init__.py  test_inference.py
tests/unit/: __init__.py  test_detector.py
